--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -1,7 +1,7 @@
 $white: white;
 
 /* make the customizations */
-$theme-colors: (
-  "info": tomato,
-  "danger": teal,
-);
+// $theme-colors: (
+//   "info": tomato,
+//   "danger": teal,
+// );
