--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,15 @@
+* li {
+  list-style: none;
+  margin-left: 1rem;
+}
+
+nav {
+  img {
+    width: 50px;
+    float: left;
+  }
+}
+
 .navlink-active {
   color: red !important;
 }
