--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,15 @@
 * li {
   list-style: none;
-  margin-left: 1rem;
 }
 
 nav {
   img {
     width: 50px;
     float: left;
+  }
+
+  li {
+    margin-left: 1rem;
   }
 }
 
